Move away from handling options through FFMPEG package

--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -26,6 +26,7 @@
             <Grid.RowDefinitions>
                 <RowDefinition />
                 <RowDefinition />
+                <RowDefinition />
             </Grid.RowDefinitions>
             <Grid.Background>
                 <SolidColorBrush Color="{ThemeResource ControlSolidFillColorDefault}"/>
